[package]
name = "ruspiro-i2c"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.3.0" # remember to update html_root_url
description = "Raspberry Pi - I²C bus interface implementation"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-i2c/tree/v0.3.0"
documentation = "https://docs.rs/ruspiro-i2c/0.3.0"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "i2c"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-i2c", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-singleton = "0.3"
ruspiro-register = "0.3"
ruspiro-gpio = "0.3"
ruspiro-timer = "0.3"

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-timer/ruspiro_pi3",
    "ruspiro-gpio/ruspiro_pi3"
]
