[package]
name = "ruspiro-i2c"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.3.1" # remember to update html_root_url
description = "Raspberry Pi - I²C bus interface implementation"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-i2c/tree/v0.3.1"
documentation = "https://docs.rs/ruspiro-i2c/0.3.1"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "i2c"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-i2c", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-singleton = "0.3"
ruspiro-register = "0.4"
ruspiro-gpio = "0.4"
ruspiro-timer = "0.4"

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = [
    "ruspiro-timer/ruspiro_pi3",
    "ruspiro-gpio/ruspiro_pi3"
]

[patch.crates-io]
ruspiro-singleton = { git = "https://github.com/RusPiRo/ruspiro-singleton.git" }
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git" }
ruspiro-timer = { git = "https://github.com/RusPiRo/ruspiro-timer.git" }
ruspiro-gpio = { git = "https://github.com/RusPiRo/ruspiro-gpio.git" }
